src/test/run-pass/issues/issue-41744.rs
// run-pass
trait Tc {}
impl Tc for bool {}

fn main() {
    let _: &[&Tc] = &[&true];
}
