src/test/compile-fail/vec-pinned-nocopy-3.rs
// error-pattern: mismatched kind
// xfail-test

resource r(b: bool) {
}

fn main() {
    let i <- [r(true)];
    let j;
    j <- copy [r(true)];
}